# LiDAR_object_detection

./: .git_test.swp  CMakeLists.txt  README.md
config/: rviz_config.rviz
launch/: clustering.launch  distance_flag.launch
src/: clustering_node.cpp  object_detection.cpp
